--- a/Librarium.vcxproj.filters
+++ b/Librarium.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="LibrariumMenu.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="LibClasses.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LibClasses.h">
