--- a/Librarium.vcxproj
+++ b/Librarium.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="LibClasses.cpp" />
     <ClCompile Include="Librarium.cpp" />
     <ClCompile Include="LibrariumMenu.cpp" />
   </ItemGroup>
