--- a/Librarium.vcxproj.filters
+++ b/Librarium.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="LibrariumMenu.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Librarium.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
